# blog

./: .gitignore  README.md  blog.code-workspace  docker-compose.yaml  justfile  package-lock.json  package.json
frontend-grpc/: .gitignore  Dockerfile  README.md  (+7 more)
posts/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  justfile  makefile  pyproject.toml  requirements-dev.txt
posts-grpc/: .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml  ruff.toml
posts-grpc/src/: client.py  config.py  server.py
posts-grpc/src/database/: connection.py
posts-grpc/src/database/alembic/: env.py
posts-grpc/src/database/model/: post.py
posts-grpc/src/interceptor/: ErrorLogger.py
posts-grpc/src/proto/: posts_pb2.py  posts_pb2.pyi  posts_pb2_grpc.py
posts-grpc/src/repository/: PostsRepository.py
posts-grpc/src/service/: PostsServicer.py
posts-grpc/src/util/: exceptions.py  mapper.py
posts-grpc/test/: conftest.py  test_hello.py  test_mapper.py
posts-grpc/test/repository/: conftest.py  test_PostsRepository.py  test_posts_repository.py
posts-grpc/test/service/: test_PostsServicer.py
posts-grpc/test/util/: test_mapper.py
posts/content/: gateway-intro.md  test.md
posts/src/: PostsServicer.py  config.py  deps.py  exceptions.py  loader.py  main.py  mapper.py  models.py  server.py
posts/src/routes/: create.py  delete.py  read.py  update.py
posts/test/: test_PostsServicer.py  test_loader.py
posts/tests/: conftest.py  test_deps.py
posts/tests/routes/: test_create.py  test_delete.py  test_get.py  test_update.py
(+134 files in other folders)
